fixing contrast issues and added bom html

--- a/styles/base.css
+++ b/styles/base.css
@@ -3,7 +3,7 @@
 :root {
     --primary-color: #001d2c;
     --secondary-color: #ffffff;
-    --accent-color: #b9529b;
+    --accent-color: #92166F;
     --accent-2-color: #00638f;
     --page-margin: 5rem;
 }
